# SYCLGameOfLife

./: .gitignore  CMakeLists.txt  LICENCE.txt  main.cpp
